2011-10-22  MIYAMUKO Katsuyuki

	* xyzzy の format は justification (~<~>) をサポート
	していないので修正

	* simple-type-error が足りなかったので追加

	* ansify のをいろいろ利用するようにした

	* テストを追加

	* copy-file と featurep を上書きしないように shadow した

2011-10-05  MIYAMUKO Katsuyuki

	* typep, subtypep 周り以外はとりあえずだいたい動くようになった

	* テストを修正

2011-10-04  MIYAMUKO Katsuyuki

	* バイトコンパイルしてある程度動くまでとりあえず修正

	* xl-alexandria 作成開始