@@ -1,3 +1,7 @@
+2011-10-29  MIYAMUKO Katsuyuki
+
+	* マクロに ed::lisp-indent-hook を設定した
+
 2011-10-22  MIYAMUKO Katsuyuki
 
 	* xyzzy の format は justification (~<~>) をサポート
